--- a/scoots/index.html
+++ b/scoots/index.html
@@ -51,42 +51,42 @@
 
          <div class="card-container">
             <article class="card">
-                <img src="./images/honda.webp" alt="honda-metro" width="300" height="auto" loading="lazy" />
+                <img src="./images/honda.webp" alt="honda-metro" class="responsive-img" loading="lazy" />
                 <div class="card-body"> 
                   <h3>Honda Metro Scooter</h3>
                   <p>Honda Metropolitan (49cc) - 1 person</p>
               </div>
           </article>
           <article class="card">
-            <img src="./images/honda1.webp" alt="honda-dio" width="300" height="auto" loading="lazy" />
+            <img src="./images/honda1.webp" alt="honda-dio" class="responsive-img" loading="lazy" />
             <div class="card-body">
                 <h3>Honda Dio Scooter</h3>
                 <p>Honda Dio (110cc) - 2 person</p>
             </div>
           </article>
           <article class="card">
-            <img src="./images/honda2.webp" alt="honda-pcx" width="300" height="auto" loading="lazy" />
+            <img src="./images/honda2.webp" alt="honda-pcx" class="responsive-img" loading="lazy" />
             <div class="card-body">
                 <h3>Honda PCX150 Scooter</h3>
                 <p>Honda PCX150 (149cc) - 2 person</p>
             </div>
           </article>
           <article class="card">
-            <img src="./images/honda3.webp" alt="honda-pioneer" width="300" height="auto" loading="lazy" />
+            <img src="./images/honda3.webp" alt="honda-pioneer" class="responsive-img"  loading="lazy" />
             <div class="card-body">
                 <h3>Honda Pioneer ATV</h3>
                 <p>Honda Pioneer 1000 - 4 person</p>
             </div>
           </article>
           <article class="card">
-            <img src="images/wrangler.webp" alt="jeep-2-door" width="300" height="auto" loading="lazy" />
+            <img src="images/wrangler.webp" alt="jeep-2-door" class="responsive-img"  loading="lazy" />
             <div class="card-body">
                 <h3>Jeep Wrangler - 2 door</h3>
                 <p>Jeep Wrangler - 2 door - open air - manual - 4 person</p>
                </div>
            </article>
            <article class="card">
-            <img src="images/wrangler4.webp" alt="jeep-4-door" width="300" height="auto" loading="lazy" />
+            <img src="images/wrangler4.webp" alt="jeep-4-door" class="responsive-img"  loading="lazy" />
             <div class="card-body">
                 <h3>Jeep Wrangler - 4 door</h3>
                 <p>Jeep Wrangler - 4 door manual with A/C - 5 person</p>
