--- a/scoots/index.html
+++ b/scoots/index.html
@@ -99,7 +99,7 @@
    <footer>
    <section>
       <div class="footer-title">
-          <img src="images/logo.webp" alt="Scooter Logo" width="60" height="60" loading="lazy" />
+          <img src="images/logo.webp" alt="Scooter Logo" width="60" height="60" loading="lazy">
           <h2>Scoots Rentals</h2>
           <a class="btn btn-secondary" href="./rentals.html">Browse Our Rentals</a>
       </div>
