--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -15,7 +15,7 @@
 <body>  
    <header>  
       <nav>  
-         <img src="images/logo.webp" alt="company logo" width="60" height="60" loading="lazy" />  
+         <img src="images/logo.webp" alt="company logo" width="60" height="60" loading="lazy">  
          <h1 id="nav-title">Scoots Rentals</h1>
         <ul id="nav-menu">   
            <li><a href="index.html">Home</a></li>  
@@ -72,7 +72,7 @@
    <footer>
       <section>
          <div class="footer-title">
-             <img src="images/logo.webp" alt="Scooter Logo" width="60" height="60" loading="lazy" />
+             <img src="images/logo.webp" alt="Scooter Logo" width="60" height="60" loading="lazy">
              <h2>Scoots Rentals</h2>
              <a class="btn btn-secondary" href="./rentals.html">Browse Our Rentals</a>
          </div>
@@ -80,10 +80,10 @@
             <span
                 ><span id="cYear">&copy;</span> Scoots Rentals | Sumara Prieto | WDD 230 Final Project | </span>
         </div>
+        <div
         <p id="last-modified"></p>
        </div>
-      </div>
-   </div>
+
 </section>
 </footer> 
    <script src="scripts/script.js"></script>
