--- a/scoots/index.html
+++ b/scoots/index.html
@@ -107,9 +107,10 @@
              <span
                  ><span id="cYear">&copy;</span> Scoots Rentals | Sumara Prieto | WDD 230 Final Project | </span>
          </div>
+         <div
          <p id="last-modified"></p>
         </div>
-      </div>
+      
    </section>
    </footer>
 
