--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -84,7 +84,7 @@
             <div class="legal">
                    <span><span id="cYear">&copy;</span> Scoots Rentals | Sumara Prieto | WDD 230 Final Project | </span>
                </div>
-               <div
+               <div>
                <p id="last-modified"></p>
               </div>
    
