--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -80,7 +80,7 @@
             <span
                 ><span id="cYear">&copy;</span> Scoots Rentals | Sumara Prieto | WDD 230 Final Project | </span>
         </div>
-        <div
+        <div>
         <p id="last-modified"></p>
        </div>
 
