--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -69,7 +69,7 @@
                    <span
                        ><span id="cYear">&copy;</span> Scoots Rentals | Sumara Prieto | WDD 230 Final Project | </span>
                </div>
-               <div
+               <div>
                <p id="last-modified"><p>
         </div>
    </section>
