--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -55,7 +55,7 @@
        <section class="contact-container">  
          <div class="map-container"> 
         <h2>Location</h2>  
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.109211876935!2d-86.92234368460574!3d20.50812098631046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e2f54a4a4a4a4%3A0x8f4e2f54a4a4a4a4!2sCozumel%2C+Mexico!5e0!3m2!1sen!2sus!4v1568902574529!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe> 
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.109211876935!2d-86.92234368460574!3d20.50812098631046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e2f54a4a4a4a4%3A0x8f4e2f54a4a4a4a4!2sCozumel%2C+Mexico!5e0!3m2!1sen!2sus!4v1568902574529!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen=""></iframe> 
          </div> 
          <div class="contact-form-container">   
         <h2>Send Us a Message</h2>  
