--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -81,6 +81,12 @@
              <h2>Scoots Rentals</h2>
              <a class="btn btn-secondary" href="./rentals.html">Browse Our Rentals</a>
             </div>
+            <p>Follow us on: 
+               <a href="https://facebook.com" target="_blank">Facebook</a> | 
+               <a href="https://twitter.com" target="_blank">Twitter</a> | 
+               <a href="https://linkedin.com" target="_blank">LinkedIn</a> |
+               <a href="https://www.instagram.com" target="_blank">Instagram</a>
+           </p>
             <div class="legal">
                    <span><span id="cYear">&copy;</span> Scoots Rentals | Sumara Prieto | WDD 230 Final Project | </span>
                </div>
