--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -7,7 +7,7 @@
    <meta name="description" content="WDD 230 - Web Frontend Development course assignment portal by Sumara Prieto">
   <meta name="author" content="Sumara Prieto">
   <meta property="og:url" content="https://sumapri.github.io/wdd230/">
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="../images/favicon.ico">
   <!-- Custom Normalization CSS -->
   <link rel="stylesheet" href="styles/normalize.css"> 
    <link rel="stylesheet" href="styles/style.css">  
